overflow fixed

--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -27,7 +27,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   cursor: default;
-  overflow-x: hidden;
 }
 
 p {
